--- a/css/style.css
+++ b/css/style.css
@@ -488,7 +488,7 @@ nav.header {
   display: flex;
   justify-content: center;
   text-align: center;
-  height: 70vh;
+  height: 100vh;
   background-color: #f2f7fa;
 }
 
@@ -499,7 +499,7 @@ nav.header {
 
 .testimonials__title {
   font-size: 6rem;
-  margin: 0 0 20px 0;
+  margin: 0;
 }
 
 .testimonials__image {
@@ -537,4 +537,3 @@ nav.header {
   padding: 0 15%;
   margin: 0;
 }
-
